 * code refactoring: qmdiClient::name has been renamed to qmdiClient::mdiClientName
 * code refactoring: include files for qmdiActionGroup and qmdiActionGroupList changed from
   "actiongroup.h" and "actiongrouplist.h" into "qmdiactiongroup.h" and qmdiactiongrouplist.h"
   Transitional includes have been added, to be removed next version, please update your code
 * new feature: qmdiClients are notified of (un)merged from a host
 * new feature: qmdiTabWidget will hide the tabbar if the number of tabs is less then 2 
 * new feature: when qmdiHost adds a qmdiClient if that client is also a widget, add it's menus+toolbars actions to the widget.
 * new feature: you can tell qmdiHost not to update it's GUI by changing qmdiHost::updateMenusAndToolBars

0.0.4 - 29 Jun 2007 - Diego Iastrubni <elcuco@kde.org>
 * Documentation re-created using doxygen 1.4.7
 * code refactoring: qmdiClient - qmdiServer is now a public member
 * new feature: qmdiActionGroup - added support for submenus
 * new feature: qmdiActionGroup - added support for adding QActionGroup
 * new feature: qmdiActionGroup - merge points are computed at run time from list of added groups
 * code refactoring: qmdiHost - updateGUI can has been updated, see documentation
 * code refactoring: qmdiServer - a lot of functions moved from qmdiTabWidget
 * code refactoring: qmdiTabWidget contains less implementation details (see qmdiServer)
 * code refactoring: qmdiTabBar has been removed, qmdiTabWidget uses an event filter now
 * new demo: plugin demo is working now, soon to be ported to the main library

0.0.3  - 7 Oct 2006 - Diego Iastrubni <elcuco@kde.org>
 * new feature: QWorkspace children are also checked for qmdiClient interface,
   feature coded by Nox PasNox <pasnox@gmail.com>
 * new feature: merge point for qmdiActionGroup
 * new class: qmdiWorkspace, a qmdiServer based on QWorkspace
 * code refactoring: qmdiClient does not contain QObject *self any more