@@ -31,7 +31,7 @@ public:
 	qmdiActionGroupList menus;
 	qmdiActionGroupList toolbars;
 
-	void updateGUI( QMainWindow *window = NULL );
+	virtual void updateGUI( QMainWindow *window = NULL );
 	void mergeClient( qmdiClient *client );
 	void unmergeClient( qmdiClient *client );
 	
