@@ -7,10 +7,12 @@ $Id$
  * code refactoring: include files for qmdiActionGroup and qmdiActionGroupList changed from
    "actiongroup.h" and "actiongrouplist.h" into "qmdiactiongroup.h" and qmdiactiongrouplist.h"
    Transitional includes have been added, to be removed next version, please update your code
+ * code refacroting: qmdiActionGroupList::updateMenu() is deprecated, use qmdiActionGroupList::updateMenuBar()
  * new feature: qmdiClients are notified of (un)merged from a host
  * new feature: qmdiTabWidget will hide the tabbar if the number of tabs is less then 2 
  * new feature: when qmdiHost adds a qmdiClient if that client is also a widget, add it's menus+toolbars actions to the widget.
  * new feature: you can tell qmdiHost not to update it's GUI by changing qmdiHost::updateMenusAndToolBars
+ * new feature: you can convert a qmdiActionGroupList to a single popup menu
 
 0.0.4 - 29 Jun 2007 - Diego Iastrubni <elcuco@kde.org>
  * Documentation re-created using doxygen 1.4.7
